--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,9 +54,11 @@ services:
     depends_on:
       - bitcoind
     image: boltz/c-lightning:0.12.0
-    entrypoint: "sh -c 'sleep 15 && lightningd --network regtest --bind-addr=0.0.0.0:9735 --bitcoin-rpcconnect=bitcoind --bitcoin-rpcport=18443 --bitcoin-rpcuser=lnbits --bitcoin-rpcpassword=lnbits'"
+    entrypoint: "sh -c 'sleep 15 && lightningd --network regtest --bind-addr=0.0.0.0:9735 --bitcoin-rpcconnect=bitcoind --bitcoin-rpcport=18443 --bitcoin-rpcuser=lnbits --bitcoin-rpcpassword=lnbits --grpc-port=11109'"
     expose:
       - 9735
+    ports:
+      - 11109:11109
     volumes:
       - ./data/clightning-1:/root/.lightning/
 
