--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,7 +38,19 @@ services:
     volumes:
       - ./data/lnd-2:/data/lnd/
       - ./data/boltz/:/root/.boltz/
-
+  cashu-mint:
+    hostname: cashu-mint
+    depends_on:
+      - lnbits
+    image: cashu:0.4.2
+    entrypoint: "sh -c 'sleep 60; sh /app/entrypoint.sh'"
+    # entrypoint: "poetry run mint --port 3338 --host 0.0.0.0"
+    ports:
+      - 3338:3338
+    environment:
+      MINT_PRIVATE_KEY: supersecretprivatekey
+    volumes:
+      - ./data/cashu/:/root/.cashu/
   bitcoind:
     hostname: bitcoind
     image: boltz/bitcoin-core:23.0
